--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "firebase": "^8.7.0",
+    "firebase": "^8.10.1",
     "html2pdf.js": "^0.9.3",
     "jquery": "^3.6.0",
     "razorpay": "^2.0.6",
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-html2pdf": "^1.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
