--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-html2pdf": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.0",
+    "toast": "^0.3.47",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
