--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "razorpay": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-html2pdf": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
