--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^4.0.3",
     "react-swiper": "^0.1.5",
     "react-toastify": "^8.2.0",
+    "rumble-charts": "^4.0.0",
     "semantic-ui-react": "^2.1.2",
     "styled-components": "^5.3.0",
     "swiper": "^6.8.4",
